--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
   <body>
     <div id="app">
       <menu-desktop></menu-desktop>
-      <home></home>
-      <works>
-        <works-card></works-card>
-      </works>
-      <about></about>
-      <contact></contact>
-      <the-footer></the-footer>
+      <main>
+        <home></home>
+        <works>
+          <works-card></works-card>
+        </works>
+        <about></about>
+        <contact></contact>
+        <the-footer></the-footer>
+      </main>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.x"></script>
