project page + json

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
       <menu-desktop></menu-desktop>
       <main>
         <router-view></router-view>
-
         <back-to-top></back-to-top>
         <the-footer></the-footer>
       </main>
     </div>
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
     <script src="components/TheFooter.vue.js"></script>
     <script src="components/BackToTop.vue.js"></script>
     <script src="components/menu/MenuDesktop.vue.js"></script>
